sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1l/errors.dfrouter
Error: A detector without a lane information occured within 'input_messstrecke.det.xml' (detector id='MQ11Fs2').
Quitting (on error).
